test: improve tests