@@ -2,7 +2,6 @@ package sky.dev.utils;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.collect.ImmutableMap;
 import org.apache.kafka.clients.admin.AdminClient;
 import org.apache.kafka.clients.admin.AdminClientConfig;
 import org.apache.kafka.clients.admin.NewTopic;
@@ -10,7 +9,6 @@ import org.apache.kafka.clients.producer.KafkaProducer;
 import org.apache.kafka.clients.producer.ProducerConfig;
 import org.apache.kafka.clients.producer.ProducerRecord;
 import org.apache.kafka.common.serialization.StringSerializer;
-import org.intellij.lang.annotations.Language;
 import sky.model.TargetFile;
 import sky.model.TargetSon;
 
@@ -22,19 +20,16 @@ import java.util.concurrent.TimeoutException;
 public class DevSonKafkaProducer {
     public static final short REPLICATION_FACTOR = 1;
     public static final int NUM_PARTITIONS = 1;
-    public static final String TOPIC = "input-explode-1";
+    public static final String TOPIC = "input";
     public static final String BOOTSTRAP_SERVERS = "localhost:9093";
 
     public static void main(String[] args) throws ExecutionException, InterruptedException, TimeoutException {
-        AdminClient adminClient = AdminClient.create(
-                ImmutableMap.of(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, BOOTSTRAP_SERVERS)
-        );
-
-        Collection<NewTopic> topics = Collections.singletonList(new NewTopic(TOPIC, NUM_PARTITIONS, REPLICATION_FACTOR));
-        if (!adminClient.listTopics().names().get().contains(TOPIC)) {
-            adminClient.createTopics(topics).all().get(30, TimeUnit.SECONDS);
+        try (AdminClient adminClient = AdminClient.create(Map.of(AdminClientConfig.BOOTSTRAP_SERVERS_CONFIG, BOOTSTRAP_SERVERS))) {
+            Collection<NewTopic> topics = Collections.singletonList(new NewTopic(TOPIC, NUM_PARTITIONS, REPLICATION_FACTOR));
+            if (!adminClient.listTopics().names().get().contains(TOPIC)) {
+                adminClient.createTopics(topics).all().get(30, TimeUnit.SECONDS);
+            }
         }
-
         try (
                 KafkaProducer<String, String> producer = new KafkaProducer<>(
                         Map.of(
@@ -53,9 +48,12 @@ public class DevSonKafkaProducer {
                     .id(id1)
                     .itemId(id1)
                     .coolId("47189473982148932194")
+                    .hopId("Ou")
+                    .createdDate(new Date())
                     .files(List.of(
                             TargetFile.builder()
                                     .parentId(id1)
+                                    .rootId(id1)
                                     .fileId("SomeFile")
                                     .itemType("Image")
                                     .text("SomeTEXT")
@@ -63,6 +61,7 @@ public class DevSonKafkaProducer {
                                     .build(),
                             TargetFile.builder()
                                     .parentId(id1)
+                                    .rootId(id1)
                                     .fileId("SomeFile2")
                                     .itemType("Zip")
                                     .text("SomeTEXT2")
@@ -70,6 +69,7 @@ public class DevSonKafkaProducer {
                                     .build(),
                             TargetFile.builder()
                                     .parentId(id1)
+                                    .rootId(id1)
                                     .fileId("SomeFile3")
                                     .itemType("Zip")
                                     .text("SomeTEXT3")
@@ -81,15 +81,19 @@ public class DevSonKafkaProducer {
                     .id(id1)
                     .itemId(id1)
                     .coolId("47189473982148932194")
+                    .hopId("Bob")
+                    .createdDate(new Date())
                     .files(List.of(
                             TargetFile.builder()
                                     .parentId(id1)
+                                    .rootId(id1)
                                     .fileId("SomeFile")
                                     .text("SomeTEXT")
                                     .html("<some>html</some>")
                                     .build(),
                             TargetFile.builder()
                                     .parentId(id1)
+                                    .rootId(id1)
                                     .fileId("SomeFile2")
                                     .text("SomeTEXT2")
                                     .html("<some>html2</some>")
